hphp/hack/test/typecheck/yield_send2.php.like_types.exp
File "yield_send2.php", line 12, characters 14-19:
Invalid argument (Typing[4110])
File "classes.hhi", line 103, characters 24-26:
Expected ~int because it is an unenforceable type
File "yield_send2.php", line 12, characters 14-19:
But got string
